--- a/public/login.html
+++ b/public/login.html
@@ -52,7 +52,7 @@
 
             <div class="panel panel-filled">
                 <div class="panel-body">
-                    <form action="http://localhost:3000/" method="post" id="loginForm" novalidate>
+                    <form action="http://localhost:3000/index.html" method="get" id="loginForm" novalidate>
                         <div class="form-group">
                             <label class="control-label" for="username">Username</label>
                             <input type="text" placeholder="example@gmail.com" title="Please enter you username" required="" value="" name="username" id="username" class="form-control">
