--- a/public/register.html
+++ b/public/register.html
@@ -55,7 +55,7 @@
                     <p>
 
                     </p>
-                    <form action="http://localhost:3000/" method="post" id="loginForm" novalidate>
+                    <form action="http://localhost:3000/signup" method="post" id="loginForm" novalidate>
                         <div class="row">
                             <div class="form-group col-lg-6">
                                 <label>Username</label>
